# not-finished-pasjans-game

./: CMakeLists.txt  main.cpp  resources.qrc
source/: singleton.h  tackle.cpp  tackle.h
widgets/: board.cpp  board.h
widgets/card/: card.cpp  card.h
widgets/card/source/: card_apperance.cpp  card_event.cpp  card_move.cpp  card_move.h
